Fix spacing on footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,6 +143,7 @@ footer{
   }
   img{
     height: 15px;
+    margin-right: 5px;
   }
 }
 .ribbon {
